--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -29,10 +29,16 @@ dist.jar=${dist.dir}/Gclaim_desktop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.11.jar=C:\\Users\\souma\\Desktop\\controlsfx-8.40.11.jar
+file.reference.Java-WebSocket-1.3.8.jar=C:\\Users\\souma\\Desktop\\Java-WebSocket-1.3.8.jar
+file.reference.json-simple-1.1.jar=C:\\Users\\souma\\Desktop\\json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.Java-WebSocket-1.3.8.jar}:\
+    ${file.reference.json-simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
