--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -30,15 +30,21 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.controlsfx-8.40.11.jar=../../../../Desktop/jarjour/jar_files (1)/controlsfx-8.40.11.jar
+file.reference.controlsfx-8.40.11.jar-1=C:\\Users\\souma\\Desktop\\controlsfx-8.40.11.jar
+file.reference.Java-WebSocket-1.3.8.jar=C:\\Users\\souma\\Desktop\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-1=../../../../Desktop/jarjour/jar_files/Java-WebSocket-1.3.8.jar
 file.reference.json-simple-1.1.jar=../../../../Desktop/jarjour/json-simple-1.1.jar/json-simple-1.1.jar
+file.reference.json-simple-1.1.jar-1=C:\\Users\\souma\\Desktop\\json-simple-1.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.Java-WebSocket-1.3.8.jar-1}:\
     ${file.reference.json-simple-1.1.jar}:\
-    ${file.reference.controlsfx-8.40.11.jar}
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.Java-WebSocket-1.3.8.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar-1}:\
+    ${file.reference.json-simple-1.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
