--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -31,15 +31,23 @@ endorsed.classpath=
 excludes=
 file.reference.controlsfx-8.40.11.jar=../../../../Desktop/jarjour/jar_files (1)/controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.11.jar-1=C:\\Users\\souma\\Desktop\\controlsfx-8.40.11.jar
+file.reference.controlsfx-8.40.11.jar-2=C:\\Users\\moham\\Downloads\\jar_files (1)\\controlsfx-8.40.11.jar
 file.reference.Java-WebSocket-1.3.8.jar=C:\\Users\\souma\\Desktop\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-1=../../../../Desktop/jarjour/jar_files/Java-WebSocket-1.3.8.jar
+file.reference.Java-WebSocket-1.3.8.jar-2=C:\\Users\\moham\\Downloads\\jar_files\\Java-WebSocket-1.3.8.jar
 file.reference.json-simple-1.1.jar=../../../../Desktop/jarjour/json-simple-1.1.jar/json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-1=C:\\Users\\souma\\Desktop\\json-simple-1.1.jar
+file.reference.json-simple-1.1.jar-2=C:\\Users\\moham\\Downloads\\json-simple-1.1.jar\\json-simple-1.1.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.Java-WebSocket-1.3.8.jar-1}:\
+    ${file.reference.Java-WebSocket-1.3.8.jar-2}:\
+    ${file.reference.controlsfx-8.40.11.jar-2}:\
+    ${file.reference.json-simple-1.1.jar-2}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.json-simple-1.1.jar}:\
     ${file.reference.controlsfx-8.40.11.jar}:\
     ${file.reference.Java-WebSocket-1.3.8.jar}:\
