--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.Java-WebSocket-1.3.8.jar=C:\\Users\\souma\\Desktop\\Java-WebSocke
 file.reference.Java-WebSocket-1.3.8.jar-1=../../../../Desktop/jarjour/jar_files/Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-2=C:\\Users\\moham\\Downloads\\jar_files\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-3=D:\\Users\\Lenovo\\Downloads\\Java-WebSocket-1.3.8.jar
+file.reference.javax.mail-1.6.1.jar=C:\\Users\\souma\\Desktop\\javax.mail-1.6.1.jar
 file.reference.json-simple-1.1.jar=../../../../Desktop/jarjour/json-simple-1.1.jar/json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-1=C:\\Users\\souma\\Desktop\\json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-2=C:\\Users\\moham\\Downloads\\json-simple-1.1.jar\\json-simple-1.1.jar
@@ -58,7 +59,8 @@ javac.classpath=\
     ${file.reference.json-simple-1.1.jar-1}:\
     ${file.reference.Java-WebSocket-1.3.8.jar-3}:\
     ${file.reference.controlsfx-8.40.11.jar-3}:\
-    ${file.reference.json-simple-1.1.jar-3}
+    ${file.reference.json-simple-1.1.jar-3}:\
+    ${file.reference.javax.mail-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
