--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -33,16 +33,20 @@ file.reference.controlsfx-8.40.11.jar=../../../../Desktop/jarjour/jar_files (1)/
 file.reference.controlsfx-8.40.11.jar-1=C:\\Users\\souma\\Desktop\\controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.11.jar-2=C:\\Users\\moham\\Downloads\\jar_files (1)\\controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.11.jar-3=D:\\Users\\Lenovo\\Downloads\\controlsfx-8.40.11.jar
+file.reference.controlsfx-8.40.11.jar-4=C:\\Users\\User\\Downloads\\controlsfx-8.40.11.jar
 file.reference.Java-WebSocket-1.3.8.jar=C:\\Users\\souma\\Desktop\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-1=../../../../Desktop/jarjour/jar_files/Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-2=C:\\Users\\moham\\Downloads\\jar_files\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-3=D:\\Users\\Lenovo\\Downloads\\Java-WebSocket-1.3.8.jar
+file.reference.Java-WebSocket-1.3.8.jar-4=C:\\Users\\User\\Downloads\\Java-WebSocket-1.3.8.jar
 file.reference.javax.mail-1.6.1.jar=C:\\Users\\souma\\Desktop\\javax.mail-1.6.1.jar
 file.reference.javax.mail.jar=C:\\Users\\moham\\Downloads\\javax.mail.jar
+file.reference.javax.mail.jar-1=C:\\Users\\User\\Downloads\\javax.mail.jar
 file.reference.json-simple-1.1.jar=../../../../Desktop/jarjour/json-simple-1.1.jar/json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-1=C:\\Users\\souma\\Desktop\\json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-2=C:\\Users\\moham\\Downloads\\json-simple-1.1.jar\\json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-3=D:\\Users\\Lenovo\\Downloads\\json-simple-1.1.jar
+file.reference.json-simple-1.1.jar-4=C:\\Users\\User\\Downloads\\json-simple-1.1.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
@@ -62,7 +66,11 @@ javac.classpath=\
     ${file.reference.controlsfx-8.40.11.jar-3}:\
     ${file.reference.json-simple-1.1.jar-3}:\
     ${file.reference.javax.mail-1.6.1.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.Java-WebSocket-1.3.8.jar-4}:\
+    ${file.reference.controlsfx-8.40.11.jar-4}:\
+    ${file.reference.json-simple-1.1.jar-4}:\
+    ${file.reference.javax.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
