--- a/Gclaim_desktop/nbproject/private/private.properties
+++ b/Gclaim_desktop/nbproject/private/private.properties
@@ -21,4 +21,4 @@ file.reference.json-simple-1.1.jar-3=C:\\Users\\elyes\\Downloads\\GClaimDesktop-
 file.reference.json-simple-1.1.jar-4=C:\\Users\\elyes\\Downloads\\GClaimDesktop-main (6)\\GClaimDesktop-main\\Gclaim_desktop
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\elyes\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
