--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -36,6 +36,7 @@ file.reference.controlsfx-8.40.11.jar-3=D:\\Users\\Lenovo\\Downloads\\controlsfx
 file.reference.controlsfx-8.40.11.jar-4=C:\\Users\\User\\Downloads\\controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.11.jar-5=C:\\Users\\elyes\\Downloads\\jarjour\\jar_files (1)\\controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.11.jar-6=C:\\Users\\User\\Downloads\\controlsfx-8.40.11.jar
+file.reference.controlsfx-8.40.11.jar-7=C:\\Users\\moham\\Downloads\\jar_files (1)\\controlsfx-8.40.11.jar
 file.reference.Java-WebSocket-1.3.8.jar=C:\\Users\\souma\\Desktop\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-1=../../../../Desktop/jarjour/jar_files/Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-2=C:\\Users\\moham\\Downloads\\jar_files\\Java-WebSocket-1.3.8.jar
@@ -43,11 +44,13 @@ file.reference.Java-WebSocket-1.3.8.jar-3=D:\\Users\\Lenovo\\Downloads\\Java-Web
 file.reference.Java-WebSocket-1.3.8.jar-4=C:\\Users\\User\\Downloads\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-5=C:\\Users\\elyes\\Downloads\\jarjour\\jar_files\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-6=C:\\Users\\User\\Downloads\\Java-WebSocket-1.3.8.jar
+file.reference.Java-WebSocket-1.3.8.jar-7=C:\\Users\\moham\\Downloads\\jar_files\\Java-WebSocket-1.3.8.jar
 file.reference.javax.mail-1.6.1.jar=C:\\Users\\souma\\Desktop\\javax.mail-1.6.1.jar
 file.reference.javax.mail.jar=C:\\Users\\moham\\Downloads\\javax.mail.jar
 file.reference.javax.mail.jar-1=C:\\Users\\User\\Downloads\\javax.mail.jar
 file.reference.javax.mail.jar-2=C:\\Users\\elyes\\Downloads\\javax.mail.jar\\javax.mail.jar
 file.reference.javax.mail.jar-3=C:\\Users\\User\\Downloads\\javax.mail.jar
+file.reference.javax.mail.jar-4=C:\\Users\\moham\\Downloads\\javax.mail.jar
 file.reference.json-simple-1.1.jar=../../../../Desktop/jarjour/json-simple-1.1.jar/json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-1=C:\\Users\\souma\\Desktop\\json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-2=C:\\Users\\moham\\Downloads\\json-simple-1.1.jar\\json-simple-1.1.jar
@@ -55,6 +58,7 @@ file.reference.json-simple-1.1.jar-3=D:\\Users\\Lenovo\\Downloads\\json-simple-1
 file.reference.json-simple-1.1.jar-4=C:\\Users\\User\\Downloads\\json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-5=C:\\Users\\elyes\\Downloads\\jarjour\\json-simple-1.1.jar\\json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-6=C:\\Users\\User\\Downloads\\json-simple-1.1.jar
+file.reference.json-simple-1.1.jar-7=C:\\Users\\moham\\Downloads\\json-simple-1.1.jar\\json-simple-1.1.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
@@ -86,7 +90,11 @@ javac.classpath=\
     ${file.reference.Java-WebSocket-1.3.8.jar-6}:\
     ${file.reference.controlsfx-8.40.11.jar-6}:\
     ${file.reference.javax.mail.jar-3}:\
-    ${file.reference.json-simple-1.1.jar-6}
+    ${file.reference.json-simple-1.1.jar-6}:\
+    ${file.reference.javax.mail.jar-4}:\
+    ${file.reference.controlsfx-8.40.11.jar-7}:\
+    ${file.reference.Java-WebSocket-1.3.8.jar-7}:\
+    ${file.reference.json-simple-1.1.jar-7}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
