--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -37,6 +37,7 @@ file.reference.controlsfx-8.40.11.jar-4=C:\\Users\\User\\Downloads\\controlsfx-8
 file.reference.controlsfx-8.40.11.jar-5=C:\\Users\\elyes\\Downloads\\jarjour\\jar_files (1)\\controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.11.jar-6=C:\\Users\\User\\Downloads\\controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.11.jar-7=C:\\Users\\moham\\Downloads\\jar_files (1)\\controlsfx-8.40.11.jar
+file.reference.controlsfx-8.40.11.jar-8=C:\\Users\\souma\\Desktop\\controlsfx-8.40.11.jar
 file.reference.Java-WebSocket-1.3.8.jar=C:\\Users\\souma\\Desktop\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-1=../../../../Desktop/jarjour/jar_files/Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-2=C:\\Users\\moham\\Downloads\\jar_files\\Java-WebSocket-1.3.8.jar
@@ -45,7 +46,9 @@ file.reference.Java-WebSocket-1.3.8.jar-4=C:\\Users\\User\\Downloads\\Java-WebSo
 file.reference.Java-WebSocket-1.3.8.jar-5=C:\\Users\\elyes\\Downloads\\jarjour\\jar_files\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-6=C:\\Users\\User\\Downloads\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-7=C:\\Users\\moham\\Downloads\\jar_files\\Java-WebSocket-1.3.8.jar
+file.reference.Java-WebSocket-1.3.8.jar-8=C:\\Users\\souma\\Desktop\\Java-WebSocket-1.3.8.jar
 file.reference.javax.mail-1.6.1.jar=C:\\Users\\souma\\Desktop\\javax.mail-1.6.1.jar
+file.reference.javax.mail-1.6.1.jar-1=C:\\Users\\souma\\Desktop\\javax.mail-1.6.1.jar
 file.reference.javax.mail.jar=C:\\Users\\moham\\Downloads\\javax.mail.jar
 file.reference.javax.mail.jar-1=C:\\Users\\User\\Downloads\\javax.mail.jar
 file.reference.javax.mail.jar-2=C:\\Users\\elyes\\Downloads\\javax.mail.jar\\javax.mail.jar
@@ -59,6 +62,7 @@ file.reference.json-simple-1.1.jar-4=C:\\Users\\User\\Downloads\\json-simple-1.1
 file.reference.json-simple-1.1.jar-5=C:\\Users\\elyes\\Downloads\\jarjour\\json-simple-1.1.jar\\json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-6=C:\\Users\\User\\Downloads\\json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-7=C:\\Users\\moham\\Downloads\\json-simple-1.1.jar\\json-simple-1.1.jar
+file.reference.json-simple-1.1.jar-8=C:\\Users\\souma\\Desktop\\json-simple-1.1.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
@@ -94,7 +98,11 @@ javac.classpath=\
     ${file.reference.javax.mail.jar-4}:\
     ${file.reference.controlsfx-8.40.11.jar-7}:\
     ${file.reference.Java-WebSocket-1.3.8.jar-7}:\
-    ${file.reference.json-simple-1.1.jar-7}
+    ${file.reference.json-simple-1.1.jar-7}:\
+    ${file.reference.Java-WebSocket-1.3.8.jar-8}:\
+    ${file.reference.controlsfx-8.40.11.jar-8}:\
+    ${file.reference.javax.mail-1.6.1.jar-1}:\
+    ${file.reference.json-simple-1.1.jar-8}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -105,7 +113,11 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.Java-WebSocket-1.3.8.jar-8}:\
+    ${file.reference.controlsfx-8.40.11.jar-8}:\
+    ${file.reference.javax.mail-1.6.1.jar-1}:\
+    ${file.reference.json-simple-1.1.jar-8}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
