--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -29,80 +29,30 @@ dist.jar=${dist.dir}/Gclaim_desktop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.controlsfx-8.40.11.jar=../../../../Desktop/jarjour/jar_files (1)/controlsfx-8.40.11.jar
-file.reference.controlsfx-8.40.11.jar-1=C:\\Users\\souma\\Desktop\\controlsfx-8.40.11.jar
-file.reference.controlsfx-8.40.11.jar-2=C:\\Users\\moham\\Downloads\\jar_files (1)\\controlsfx-8.40.11.jar
-file.reference.controlsfx-8.40.11.jar-3=D:\\Users\\Lenovo\\Downloads\\controlsfx-8.40.11.jar
-file.reference.controlsfx-8.40.11.jar-4=C:\\Users\\User\\Downloads\\controlsfx-8.40.11.jar
-file.reference.controlsfx-8.40.11.jar-5=C:\\Users\\elyes\\Downloads\\jarjour\\jar_files (1)\\controlsfx-8.40.11.jar
-file.reference.controlsfx-8.40.11.jar-6=C:\\Users\\User\\Downloads\\controlsfx-8.40.11.jar
-file.reference.controlsfx-8.40.11.jar-7=C:\\Users\\moham\\Downloads\\jar_files (1)\\controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.11.jar-8=C:\\Users\\souma\\Desktop\\controlsfx-8.40.11.jar
-file.reference.Java-WebSocket-1.3.8.jar=C:\\Users\\souma\\Desktop\\Java-WebSocket-1.3.8.jar
-file.reference.Java-WebSocket-1.3.8.jar-1=../../../../Desktop/jarjour/jar_files/Java-WebSocket-1.3.8.jar
-file.reference.Java-WebSocket-1.3.8.jar-2=C:\\Users\\moham\\Downloads\\jar_files\\Java-WebSocket-1.3.8.jar
-file.reference.Java-WebSocket-1.3.8.jar-3=D:\\Users\\Lenovo\\Downloads\\Java-WebSocket-1.3.8.jar
-file.reference.Java-WebSocket-1.3.8.jar-4=C:\\Users\\User\\Downloads\\Java-WebSocket-1.3.8.jar
-file.reference.Java-WebSocket-1.3.8.jar-5=C:\\Users\\elyes\\Downloads\\jarjour\\jar_files\\Java-WebSocket-1.3.8.jar
-file.reference.Java-WebSocket-1.3.8.jar-6=C:\\Users\\User\\Downloads\\Java-WebSocket-1.3.8.jar
-file.reference.Java-WebSocket-1.3.8.jar-7=C:\\Users\\moham\\Downloads\\jar_files\\Java-WebSocket-1.3.8.jar
+file.reference.itextpdf-5.1.0.jar=C:\\Users\\souma\\Desktop\\itextpdf-5.1.0.jar
 file.reference.Java-WebSocket-1.3.8.jar-8=C:\\Users\\souma\\Desktop\\Java-WebSocket-1.3.8.jar
-file.reference.javax.mail-1.6.1.jar=C:\\Users\\souma\\Desktop\\javax.mail-1.6.1.jar
 file.reference.javax.mail-1.6.1.jar-1=C:\\Users\\souma\\Desktop\\javax.mail-1.6.1.jar
-file.reference.javax.mail.jar=C:\\Users\\moham\\Downloads\\javax.mail.jar
-file.reference.javax.mail.jar-1=C:\\Users\\User\\Downloads\\javax.mail.jar
-file.reference.javax.mail.jar-2=C:\\Users\\elyes\\Downloads\\javax.mail.jar\\javax.mail.jar
-file.reference.javax.mail.jar-3=C:\\Users\\User\\Downloads\\javax.mail.jar
-file.reference.javax.mail.jar-4=C:\\Users\\moham\\Downloads\\javax.mail.jar
-file.reference.json-simple-1.1.jar=../../../../Desktop/jarjour/json-simple-1.1.jar/json-simple-1.1.jar
-file.reference.json-simple-1.1.jar-1=C:\\Users\\souma\\Desktop\\json-simple-1.1.jar
-file.reference.json-simple-1.1.jar-2=C:\\Users\\moham\\Downloads\\json-simple-1.1.jar\\json-simple-1.1.jar
-file.reference.json-simple-1.1.jar-3=D:\\Users\\Lenovo\\Downloads\\json-simple-1.1.jar
-file.reference.json-simple-1.1.jar-4=C:\\Users\\User\\Downloads\\json-simple-1.1.jar
-file.reference.json-simple-1.1.jar-5=C:\\Users\\elyes\\Downloads\\jarjour\\json-simple-1.1.jar\\json-simple-1.1.jar
-file.reference.json-simple-1.1.jar-6=C:\\Users\\User\\Downloads\\json-simple-1.1.jar
-file.reference.json-simple-1.1.jar-7=C:\\Users\\moham\\Downloads\\json-simple-1.1.jar\\json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-8=C:\\Users\\souma\\Desktop\\json-simple-1.1.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
+file.reference.poi-3.13.jar=C:\\Users\\souma\\Desktop\\poi-3.13.jar
+file.reference.poi-ooxml-3.13.jar=C:\\Users\\souma\\Desktop\\poi-ooxml-3.13.jar
+file.reference.poi-ooxml-schemas-3.13.jar=C:\\Users\\souma\\Desktop\\poi-ooxml-schemas-3.13.jar
+file.reference.xmlbeans-2.6.0.jar=C:\\Users\\souma\\Desktop\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.Java-WebSocket-1.3.8.jar-1}:\
-    ${file.reference.Java-WebSocket-1.3.8.jar-2}:\
-    ${file.reference.controlsfx-8.40.11.jar-2}:\
-    ${file.reference.json-simple-1.1.jar-2}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.json-simple-1.1.jar}:\
-    ${file.reference.controlsfx-8.40.11.jar}:\
-    ${file.reference.Java-WebSocket-1.3.8.jar}:\
-    ${file.reference.controlsfx-8.40.11.jar-1}:\
-    ${file.reference.json-simple-1.1.jar-1}:\
-    ${file.reference.Java-WebSocket-1.3.8.jar-3}:\
-    ${file.reference.controlsfx-8.40.11.jar-3}:\
-    ${file.reference.json-simple-1.1.jar-3}:\
-    ${file.reference.javax.mail-1.6.1.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.Java-WebSocket-1.3.8.jar-4}:\
-    ${file.reference.controlsfx-8.40.11.jar-4}:\
-    ${file.reference.json-simple-1.1.jar-4}:\
-    ${file.reference.javax.mail.jar-1}:\
-    ${file.reference.Java-WebSocket-1.3.8.jar-5}:\
-    ${file.reference.controlsfx-8.40.11.jar-5}:\
-    ${file.reference.json-simple-1.1.jar-5}:\
-    ${file.reference.javax.mail.jar-2}:\
-    ${file.reference.Java-WebSocket-1.3.8.jar-6}:\
-    ${file.reference.controlsfx-8.40.11.jar-6}:\
-    ${file.reference.javax.mail.jar-3}:\
-    ${file.reference.json-simple-1.1.jar-6}:\
-    ${file.reference.javax.mail.jar-4}:\
-    ${file.reference.controlsfx-8.40.11.jar-7}:\
-    ${file.reference.Java-WebSocket-1.3.8.jar-7}:\
-    ${file.reference.json-simple-1.1.jar-7}:\
     ${file.reference.Java-WebSocket-1.3.8.jar-8}:\
     ${file.reference.controlsfx-8.40.11.jar-8}:\
     ${file.reference.javax.mail-1.6.1.jar-1}:\
-    ${file.reference.json-simple-1.1.jar-8}
+    ${file.reference.json-simple-1.1.jar-8}:\
+    ${file.reference.itextpdf-5.1.0.jar}:\
+    ${file.reference.poi-3.13.jar}:\
+    ${file.reference.poi-ooxml-3.13.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.13.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -117,7 +67,12 @@ javac.test.classpath=\
     ${file.reference.Java-WebSocket-1.3.8.jar-8}:\
     ${file.reference.controlsfx-8.40.11.jar-8}:\
     ${file.reference.javax.mail-1.6.1.jar-1}:\
-    ${file.reference.json-simple-1.1.jar-8}
+    ${file.reference.json-simple-1.1.jar-8}:\
+    ${file.reference.itextpdf-5.1.0.jar}:\
+    ${file.reference.poi-3.13.jar}:\
+    ${file.reference.poi-ooxml-3.13.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.13.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
