--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -29,16 +29,26 @@ dist.jar=${dist.dir}/Gclaim_desktop.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.11.jar=D:\\Users\\Lenovo\\Downloads\\jar\\controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.11.jar-8=C:\\Users\\souma\\Desktop\\controlsfx-8.40.11.jar
+file.reference.Downloads-jar=D:\\Users\\Lenovo\\Downloads\\jar
 file.reference.itextpdf-5.1.0.jar=C:\\Users\\souma\\Desktop\\itextpdf-5.1.0.jar
+file.reference.itextpdf-5.1.0.jar-1=D:\\Users\\Lenovo\\Downloads\\jar\\itextpdf-5.1.0.jar
+file.reference.Java-WebSocket-1.3.8.jar=D:\\Users\\Lenovo\\Downloads\\jar\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-8=C:\\Users\\souma\\Desktop\\Java-WebSocket-1.3.8.jar
+file.reference.javax.mail-1.6.1.jar=D:\\Users\\Lenovo\\Downloads\\jar\\javax.mail-1.6.1.jar
 file.reference.javax.mail-1.6.1.jar-1=C:\\Users\\souma\\Desktop\\javax.mail-1.6.1.jar
+file.reference.json-simple-1.1.jar=D:\\Users\\Lenovo\\Downloads\\jar\\json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-8=C:\\Users\\souma\\Desktop\\json-simple-1.1.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 file.reference.poi-3.13.jar=C:\\Users\\souma\\Desktop\\poi-3.13.jar
+file.reference.poi-3.13.jar-1=D:\\Users\\Lenovo\\Downloads\\jar\\poi-3.13.jar
 file.reference.poi-ooxml-3.13.jar=C:\\Users\\souma\\Desktop\\poi-ooxml-3.13.jar
+file.reference.poi-ooxml-3.13.jar-1=D:\\Users\\Lenovo\\Downloads\\jar\\poi-ooxml-3.13.jar
 file.reference.poi-ooxml-schemas-3.13.jar=C:\\Users\\souma\\Desktop\\poi-ooxml-schemas-3.13.jar
+file.reference.poi-ooxml-schemas-3.13.jar-1=D:\\Users\\Lenovo\\Downloads\\jar\\poi-ooxml-schemas-3.13.jar
 file.reference.xmlbeans-2.6.0.jar=C:\\Users\\souma\\Desktop\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-1=D:\\Users\\Lenovo\\Downloads\\jar\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -52,7 +62,17 @@ javac.classpath=\
     ${file.reference.poi-3.13.jar}:\
     ${file.reference.poi-ooxml-3.13.jar}:\
     ${file.reference.poi-ooxml-schemas-3.13.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.Downloads-jar}:\
+    ${file.reference.Java-WebSocket-1.3.8.jar}:\
+    ${file.reference.controlsfx-8.40.11.jar}:\
+    ${file.reference.itextpdf-5.1.0.jar-1}:\
+    ${file.reference.javax.mail-1.6.1.jar}:\
+    ${file.reference.json-simple-1.1.jar}:\
+    ${file.reference.poi-3.13.jar-1}:\
+    ${file.reference.poi-ooxml-3.13.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-3.13.jar-1}:\
+    ${file.reference.xmlbeans-2.6.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
