--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -47,6 +47,9 @@ file.reference.poi-ooxml-3.13.jar=C:\\Users\\souma\\Desktop\\poi-ooxml-3.13.jar
 file.reference.poi-ooxml-3.13.jar-1=D:\\Users\\Lenovo\\Downloads\\jar\\poi-ooxml-3.13.jar
 file.reference.poi-ooxml-schemas-3.13.jar=C:\\Users\\souma\\Desktop\\poi-ooxml-schemas-3.13.jar
 file.reference.poi-ooxml-schemas-3.13.jar-1=D:\\Users\\Lenovo\\Downloads\\jar\\poi-ooxml-schemas-3.13.jar
+file.reference.twilio-8.3.0-jar-with-dependencies.jar=D:\\Users\\Lenovo\\Downloads\\twilio-8.3.0-jar-with-dependencies.jar
+file.reference.twilio-8.3.0-javadoc.jar=D:\\Users\\Lenovo\\Downloads\\twilio-8.3.0-javadoc.jar
+file.reference.twilio-8.9.0.jar=D:\\Users\\Lenovo\\Downloads\\twilio-8.9.0.jar
 file.reference.xmlbeans-2.6.0.jar=C:\\Users\\souma\\Desktop\\xmlbeans-2.6.0.jar
 file.reference.xmlbeans-2.6.0.jar-1=D:\\Users\\Lenovo\\Downloads\\jar\\xmlbeans-2.6.0.jar
 includes=**
@@ -72,7 +75,10 @@ javac.classpath=\
     ${file.reference.poi-3.13.jar-1}:\
     ${file.reference.poi-ooxml-3.13.jar-1}:\
     ${file.reference.poi-ooxml-schemas-3.13.jar-1}:\
-    ${file.reference.xmlbeans-2.6.0.jar-1}
+    ${file.reference.xmlbeans-2.6.0.jar-1}:\
+    ${file.reference.twilio-8.9.0.jar}:\
+    ${file.reference.twilio-8.3.0-jar-with-dependencies.jar}:\
+    ${file.reference.twilio-8.3.0-javadoc.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
