--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -34,6 +34,8 @@ file.reference.commons-codec-1.10.jar=C:\\Users\\souma\\Downloads\\wetransfer_ja
 file.reference.commons-logging-1.2.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\commons-logging-1.2.jar
 file.reference.controlsfx-8.40.11.jar=../../../../Desktop/jarjour/jar_files (1)/controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.11.jar-8=C:\\Users\\souma\\Desktop\\controlsfx-8.40.11.jar
+file.reference.core-3.4.1-javadoc.jar=C:\\Users\\souma\\Downloads\\bibout\\bibout\\core-3.4.1-javadoc.jar
+file.reference.core-3.4.1.jar=C:\\Users\\souma\\Downloads\\bibout\\bibout\\core-3.4.1.jar
 file.reference.guava-18.0.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\guava-18.0.jar
 file.reference.httpclient-4.5.6.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\httpclient-4.5.6.jar
 file.reference.httpcore-4.4.10.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\httpcore-4.4.10.jar
@@ -105,7 +107,9 @@ javac.classpath=\
     ${file.reference.controlsfx-8.40.11.jar}:\
     ${file.reference.Java-WebSocket-1.3.8.jar}:\
     ${file.reference.twilio-7.36.1.jar-1}:\
-    ${file.reference.simplecaptcha-1.2.1.jar-1}
+    ${file.reference.simplecaptcha-1.2.1.jar-1}:\
+    ${file.reference.core-3.4.1-javadoc.jar}:\
+    ${file.reference.core-3.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
