--- a/Gclaim_desktop/nbproject/project.properties
+++ b/Gclaim_desktop/nbproject/project.properties
@@ -33,9 +33,13 @@ file.reference.activation-1.1.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_tw
 file.reference.commons-codec-1.10.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\commons-codec-1.10.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\commons-logging-1.2.jar
 file.reference.controlsfx-8.40.11.jar=../../../../Desktop/jarjour/jar_files (1)/controlsfx-8.40.11.jar
+file.reference.controlsfx-8.40.11.jar-1=C:\\Users\\User\\Downloads\\controlsfx-8.40.11.jar
 file.reference.controlsfx-8.40.11.jar-8=C:\\Users\\souma\\Desktop\\controlsfx-8.40.11.jar
+file.reference.controlsfx-samples-8.40.13.jar=C:\\Users\\User\\Downloads\\controlsfx-samples-8.40.13.jar
 file.reference.core-3.4.1-javadoc.jar=C:\\Users\\souma\\Downloads\\bibout\\bibout\\core-3.4.1-javadoc.jar
 file.reference.core-3.4.1.jar=C:\\Users\\souma\\Downloads\\bibout\\bibout\\core-3.4.1.jar
+file.reference.easy-pie-chart-2.1.7.jar=C:\\Users\\User\\Downloads\\easy-pie-chart-2.1.7.jar
+file.reference.gtranslateapi-1.0.jar=C:\\Users\\User\\Downloads\\gtranslateapi-1.0.jar
 file.reference.guava-18.0.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\guava-18.0.jar
 file.reference.httpclient-4.5.6.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\httpclient-4.5.6.jar
 file.reference.httpcore-4.4.10.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\httpcore-4.4.10.jar
@@ -45,21 +49,28 @@ file.reference.jackson-annotations-2.9.8.jar=C:\\Users\\souma\\Downloads\\wetran
 file.reference.jackson-core-2.9.8.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\jackson-core-2.9.8.jar
 file.reference.jackson-databind-2.9.8.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\jackson-databind-2.9.8.jar
 file.reference.Java-WebSocket-1.3.8.jar=../../../../Desktop/jarjour/jar_files/Java-WebSocket-1.3.8.jar
+file.reference.Java-WebSocket-1.3.8.jar-1=C:\\Users\\User\\Downloads\\Java-WebSocket-1.3.8.jar
 file.reference.Java-WebSocket-1.3.8.jar-8=C:\\Users\\souma\\Desktop\\Java-WebSocket-1.3.8.jar
 file.reference.javax.mail-1.6.1.jar-1=C:\\Users\\souma\\Desktop\\javax.mail-1.6.1.jar
 file.reference.javax.mail.jar=../../../../Desktop/jarjour/javax.mail.jar
+file.reference.javax.mail.jar-1=C:\\Users\\User\\Downloads\\javax.mail.jar
 file.reference.jaxb-api-2.2.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\jaxb-api-2.2.jar
 file.reference.jjwt-0.4.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\jjwt-0.4.jar
+file.reference.jl1.0.jar=C:\\Users\\User\\Downloads\\jl1.0.jar
 file.reference.joda-time-2.5.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\joda-time-2.5.jar
 file.reference.json-simple-1.1.jar=../../../../Desktop/jarjour/json-simple-1.1.jar/json-simple-1.1.jar
+file.reference.json-simple-1.1.jar-1=C:\\Users\\User\\Downloads\\json-simple-1.1.jar
 file.reference.json-simple-1.1.jar-8=C:\\Users\\souma\\Desktop\\json-simple-1.1.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 file.reference.poi-3.13.jar=C:\\Users\\souma\\Desktop\\poi-3.13.jar
 file.reference.poi-3.13.jar-1=../../../../Desktop/jarjour/poi-3.13.jar
+file.reference.poi-3.13.jar-2=C:\\Users\\User\\Downloads\\poi-3.13.jar
 file.reference.poi-ooxml-3.13.jar=C:\\Users\\souma\\Desktop\\poi-ooxml-3.13.jar
 file.reference.poi-ooxml-3.13.jar-1=../../../../Desktop/jarjour/poi-ooxml-3.13.jar
+file.reference.poi-ooxml-3.13.jar-2=C:\\Users\\User\\Downloads\\poi-ooxml-3.13.jar
 file.reference.poi-ooxml-schemas-3.13.jar=C:\\Users\\souma\\Desktop\\poi-ooxml-schemas-3.13.jar
 file.reference.poi-ooxml-schemas-3.13.jar-1=../../../../Desktop/jarjour/poi-ooxml-schemas-3.13.jar
+file.reference.poi-ooxml-schemas-3.13.jar-2=C:\\Users\\User\\Downloads\\poi-ooxml-schemas-3.13.jar
 file.reference.simplecaptcha-1.2.1.jar=C:\\Users\\souma\\Desktop\\simplecaptcha-1.2.1.jar
 file.reference.simplecaptcha-1.2.1.jar-1=../../../../Desktop/jarjour/simplecaptcha-1.2.1.jar
 file.reference.slf4j-api-1.7.6.jar=C:\\Users\\souma\\Downloads\\wetransfer_jar_twilio-2_2022-04-28_1010\\jar_twilio(2)\\slf4j-api-1.7.6.jar
@@ -109,7 +120,18 @@ javac.classpath=\
     ${file.reference.twilio-7.36.1.jar-1}:\
     ${file.reference.simplecaptcha-1.2.1.jar-1}:\
     ${file.reference.core-3.4.1-javadoc.jar}:\
-    ${file.reference.core-3.4.1.jar}
+    ${file.reference.core-3.4.1.jar}:\
+    ${file.reference.Java-WebSocket-1.3.8.jar-1}:\
+    ${file.reference.controlsfx-8.40.11.jar-1}:\
+    ${file.reference.controlsfx-samples-8.40.13.jar}:\
+    ${file.reference.easy-pie-chart-2.1.7.jar}:\
+    ${file.reference.gtranslateapi-1.0.jar}:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.jl1.0.jar}:\
+    ${file.reference.json-simple-1.1.jar-1}:\
+    ${file.reference.poi-3.13.jar-2}:\
+    ${file.reference.poi-ooxml-3.13.jar-2}:\
+    ${file.reference.poi-ooxml-schemas-3.13.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
